--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 This is the source code for the article Using EXPLAIN to Write Better MySQL
-Queries by Shameer C, available at 
+Queries by Shameer C available at 
 http://sitepoint.com/using-explain-to-write-better-mysql-queries
